--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .main-tools-pattern {
+    background-image: linear-gradient(
+      107.51deg,
+      rgba(97, 196, 183, 0.4) 5.37%,
+      rgba(97, 196, 183, 0.1) 93.02%
+    );
+  }
+
+  .learning-tools-pattern {
+    background-image: linear-gradient(
+      107.29deg,
+      rgba(255, 255, 255, 0.4) 10.77%,
+      rgba(255, 255, 255, 0.1) 83.31%
+    );
+  }
+
+  .uiux-tools-pattern {
+    background-image: linear-gradient(
+      153.09deg,
+      rgba(246, 165, 96, 0.4) 4.6%,
+      rgba(246, 165, 96, 0.1) 91.98%
+    );
+  }
+
+  .apps-pattern {
+    background-image: linear-gradient(
+      155.86deg,
+      rgba(243, 158, 158, 0.4) 6.48%,
+      rgba(243, 158, 158, 0.1) 92.62%
+    );
+  }
+
+  .resume-pattern {
+    background-image: linear-gradient(
+      104.87deg,
+      rgba(235, 117, 101, 0.4) 11.03%,
+      rgba(235, 117, 101, 0.1) 91.28%
+    );
+  }
+
+  .other-tools-pattern {
+    background-image: linear-gradient(
+      152.06deg,
+      rgba(117, 92, 222, 0.4) -0.6%,
+      rgba(117, 92, 222, 0.1) 85.46%
+    );
+  }
+}
