--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
+/* Custom Fonts */
+@font-face {
+  font-family: "DepartureMono";
+  src:
+    url("/fonts/DepartureMono-Regular.otf") format("opentype"),
+    url("/fonts/DepartureMono-Regular.woff2") format("woff2"),
+    url("/fonts/DepartureMono-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
